# rest_libcint

./: .gitignore  Cargo.toml  README.md  docs.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/rest_libcint/: all.html  enum.CintType.html  enum.IJOPT.html  index.html  sidebar-items.js  struct.CINTR2CDATA.html
docs/src/rest_libcint/: cint.rs.html  lib.rs.html
src/: cint.rs  lib.rs
